omg, this day .... I get most recent photos now, kind of an ugly solution.

--- a/Projekt/src/offline/offline-content.html
+++ b/Projekt/src/offline/offline-content.html
@@ -28,20 +28,26 @@
                     </div>
                 </noscript>
 
-                <div class="col-md-6 chart_div_overall pull-left">
+                <div class="jumbotron">
+                    <p>
+                        Can't seem to show much more info than this right now :/
+                    </p>
+                </div>
+
+                <!--<div class="col-md-6 text-center">
                     <h3 class="overall">Latest saved statistics overall</h3>
-                    <div id="info-overall" class="col-md-8"></div>
+                    <div id="info-overall"></div>
                 </div>
-                <div class="col-md-6 chart_div_overall pull-right">
+                <div class="col-md-6 text-center">
                     <h3 class="overall">Latest saved statistics for last month</h3>
-                    <div id="info-month" class=" col-md-8"></div>
-                </div>
+                    <div id="info-month"></div>
+                </div>-->
             </div>
 
             <div id="tagDetails">
             </div>
         </div>
-        <script src="src/lib/jquery-1.11.3.min.js"></script>
-        <script src="src/content/offline-app.js"></script>
+        <!--<script src="src/lib/jquery-1.11.3.min.js"></script>
+        <script src="src/offline/offline-app.js"></script>-->
     </body>
 </html>
