only show statistics for last month

--- a/Projekt/src/offline/offline-content.html
+++ b/Projekt/src/offline/offline-content.html
@@ -17,37 +17,33 @@
                     But you can still view stuff, cool right <i class="fa fa-thumbs-o-up"></i></p>
             </div>
             <div id="main" class="content">
-                <noscript>
-                    <div class="label-danger custom-error">
-                        <p>
-                            JavaScript seems to be disabled, please enable it to enjoy the full potential of this site.
-                        </p>
-                        <p>
-                            <a href="http://www.enable-javascript.com" target="_blank">Here you can find instructions on how to enable JavaScript</a>
-                        </p>
-                    </div>
-                </noscript>
+                <div class="content">
+                    <noscript>
+                        <div class="label-danger custom-error">
+                            <p>
+                                JavaScript seems to be disabled, please enable it to enjoy the full potential of this site.
+                            </p>
+                            <p>
+                                <a href="http://www.enable-javascript.com" target="_blank">Here you can find instructions on how to enable JavaScript</a>
+                            </p>
+                        </div>
+                    </noscript>
 
-                <div class="jumbotron">
-                    <p>
-                        Can't seem to show much more info than this right now :/
-                    </p>
-                </div>
-
-                <!--<div class="col-md-6 text-center">
+                <div class="col-md-6 text-center">
                     <h3 class="overall">Latest saved statistics overall</h3>
                     <div id="info-overall"></div>
                 </div>
                 <div class="col-md-6 text-center">
                     <h3 class="overall">Latest saved statistics for last month</h3>
                     <div id="info-month"></div>
-                </div>-->
+                </div>
+                </div>
             </div>
 
             <div id="tagDetails">
             </div>
         </div>
-        <!--<script src="src/lib/jquery-1.11.3.min.js"></script>
-        <script src="src/offline/offline-app.js"></script>-->
+        <script src="src/lib/jquery-1.11.3.min.js"></script>
+        <script src="src/offline/offline-app.js"></script>
     </body>
 </html>
